fix (Stack): add a flex-wrap: wrap in its styling

--- a/packages/grapes/src/Layout/Stack/Stack.scss
+++ b/packages/grapes/src/Layout/Stack/Stack.scss
@@ -1,5 +1,6 @@
 .stack {
   display: flex;
+  flex-wrap: wrap;
 
   &.full-width {
     width: 100%;
